# respyra

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.claude/agents/: experiment-builder.md  sci-docs-reviewer.md
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
docs/: adapting_belt.md  conf.py  creating_experiments.md  index.md  installation.md  quickstart.md  troubleshooting.md  userguide.md  visualization.md
docs/_templates/: layout.html
docs/api/: breath_belt.rst  data_logger.rst  display.rst  events.rst  index.md  plot_session.rst  target_generator.rst
docs/examples/: breath_tracking_task.md  demo_belt_connection.md  demo_display.md  demo_threaded_belt.md  index.md  test_belt_display.md
experiments/: defaults.py  demo.py  validation_study.py
paper/: TODO.md  analysis.py  analysis_rationale.md  main.aux  main.bbl  main.bcf  main.blg  main.out  main.tex  plot_paper.py  plot_validation.py  references.bib  table1_session_stats.tex  table1_session_stats.txt  table_breath_phase_stats.txt
respyra/: __init__.py
respyra/configs/: breath_tracking.py  demo.py  experiment_config.py  presets.py  test_experiment.py  validation_study.py
respyra/core/: breath_belt.py  data_logger.py  display.py  events.py  runner.py  target_generator.py
respyra/demos/: demo_belt_connection.py  demo_display.py  (+1 more)
tests/: conftest.py  test_breath_belt.py  test_data_logger.py  test_display.py  test_events.py  test_experiment_config.py  test_presets.py  test_runner.py  test_target_generator.py
(+27 files in other folders)
